[Initial] Changed Name

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,22 +5,22 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ecocheckr | Grammarly for Environmental Claims</title>
+  <title>Borg | Personalized Diagnosis Recommendations</title>
 
-  <meta name="title" content="Ecocheckr | Grammarly for Environmental Claims">
-  <meta name="description" content="Ecocheckr | Grammarly for Environmental Claims">
+  <meta name="title" content="Borg | Personalized Diagnosis Recommendations">
+  <meta name="description" content="Borg | Personalized Diagnosis Recommendations">
 
   <!-- Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://anything-llm.ai">
-  <meta property="og:title" content="Ecocheckr | Grammarly for Environmental Claims">
-  <meta property="og:description" content="Ecocheckr | Grammarly for Environmental Claims">
+  <meta property="og:title" content="Borg | Personalized Diagnosis Recommendations">
+  <meta property="og:description" content="Borg | Personalized Diagnosis Recommendations">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://anything-llm.ai">
-  <meta property="twitter:title" content="Ecocheckr | Grammarly for Environmental Claims">
-  <meta property="twitter:description" content="Ecocheckr | Grammarly for Environmental Claims">
+  <meta property="twitter:title" content="Borg | Personalized Diagnosis Recommendations">
+  <meta property="twitter:description" content="Borg | Personalized Diagnosis Recommendations">
 
   <link rel="icon" href="/favicon.ico" />
   <link rel="apple-touch-icon" href="/favicon.ico" />
